@@ -1,4 +1,5 @@
 
+ o Topological: fix bug in presence of disjoint cycles. 
  o new module [Graphml] to export graphs into the graphml format 
   (contributed by Pietro Abate)
  o Builder.S now contains functions remove_*.
